--- a/css/spliceboard.css
+++ b/css/spliceboard.css
@@ -2,8 +2,18 @@
     margin: 10px;
 }
 
+body{
+    margin-top: 30px;
+    background-image: url('/images/body.jpg');
+    background-attachment: fixed;
+}
+
 #sBody{
     text-align: center;
+}
+
+#sBody textarea{
+    opacity: 0.4;
 }
 
 #subscribe{
