--- a/css/spliceboard.css
+++ b/css/spliceboard.css
@@ -4,7 +4,7 @@
 
 body{
     margin-top: 30px;
-    background-image: url('/images/body.jpg');
+    background-image: url('/image/body.jpg');
     background-attachment: fixed;
 }
 
@@ -21,5 +21,5 @@ body{
     margin-bottom: 15px;
     width: 80px;
     height: 20px;
-    background:url(../images/submit.jpg);
+    background:url(../image/submit.jpg);
 } 
