--- a/css/spliceboard_php.css
+++ b/css/spliceboard_php.css
@@ -1,4 +1,4 @@
 body{
-    background-image: url('/images/body.jpg');
+    background-image: url('/image/body.jpg');
     background-attachment: fixed;
 }
