--- a/css/spliceboard.css
+++ b/css/spliceboard.css
@@ -21,5 +21,5 @@ body{
     margin-bottom: 15px;
     width: 80px;
     height: 20px;
-    background:url(../image/submit.jpg);
+    background:url('../images/submit.jpg');
 } 
