--- a/css/spliceboard.css
+++ b/css/spliceboard.css
@@ -6,6 +6,8 @@ body{
     margin-top: 30px;
     background-image: url('/image/body.jpg');
     background-attachment: fixed;
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 #sBody{
