--- a/css/spliceboard_php.css
+++ b/css/spliceboard_php.css
@@ -1,4 +1,6 @@
 body{
     background-image: url('/image/body.jpg');
     background-attachment: fixed;
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
